# puzzling

./: .gitignore  Cargo.toml  README.md  advent.fish
advent-of-code-2020/: .gitignore  01.ipynb  02.ipynb  03.ipynb  04.ipynb  Pipfile  README.md  setup.cfg
advent-of-code-2020/advent/: __init__.py  __main__.py  const.py  dev_env.py  inputs.py  parsing.py
advent-of-code-2020/advent/days/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
euler/: Cargo.toml
euler/src/: lib.rs
src/: config.rs  lib.rs  logging.rs  prelude.rs
src/advent_of_code/: challenge.rs  mod.rs  parsing.rs  puzzle.rs
templates/: advent.rs
